// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReactPersistRoute /> when route changes should call adpater's onSave with the serialized location for basic urls 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "mypwa",
      Object {
        "hash": "",
        "pathname": "/u/1",
        "search": "",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`<ReactPersistRoute /> when route changes should call adpater's onSave with the serialized location for urls with hash 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "mypwa",
      Object {
        "hash": "#input",
        "pathname": "/u/1",
        "search": "",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`<ReactPersistRoute /> when route changes should call adpater's onSave with the serialized location for urls with port 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "mypwa",
      Object {
        "hash": "",
        "pathname": "/u/1",
        "search": "",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`<ReactPersistRoute /> when route changes should call adpater's onSave with the serialized location for urls with search 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "mypwa",
      Object {
        "hash": "",
        "pathname": "/u/1",
        "search": "?q=getit",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
